// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdaptableGrid /> by default matches with snapshot 1`] = `
<div
  className="sc-AxjAm jgWwwj"
>
  <div
    className="sc-AxirZ gkwspA"
  >
    Test
  </div>
  <div
    className="sc-AxirZ gjMFur"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with className matches with snapshot 1`] = `
<div
  className="sc-AxjAm jgWwwj my_classname"
>
  <div
    className="sc-AxirZ bBhHcx my_second_classname"
  >
    Test
  </div>
  <div
    className="sc-AxirZ bBhHcx my_third_classname"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with custom HTML tags matches with snapshot 1`] = `
<dl
  className="sc-AxjAm jgWwwj"
>
  <dd
    className="sc-AxirZ gkwspA"
  >
    Test
  </dd>
  <dt
    className="sc-AxirZ gjMFur"
  >
    Test
  </dt>
</dl>
`;

exports[`<AdaptableGrid /> with some props matches with snapshot 1`] = `
<div
  className="sc-AxjAm hHARTD"
>
  <div
    className="sc-AxirZ hReZrX"
    offset={3}
  >
    Test
  </div>
  <div
    className="sc-AxirZ bBhHcx"
  >
    Test
  </div>
</div>
`;
